atualizacao de dashboard

--- a/site/public/dashboard/dashboard.html
+++ b/site/public/dashboard/dashboard.html
@@ -120,6 +120,23 @@
 
 
 </body>
+<footer>
+
+    <div id="container_rodape">
+ 
+    <div id="logo_rodape">
+
+      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+    </div>
+
+    <div id="informacoes_rodape">
+
+      <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
+
+    </div>
+</div>
+  </footer>
 
 </html>
 
