--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -20,8 +20,8 @@
             <li><a href="#"> </a></li>
             <li><a href="salaComunal.html">Sala Comunal</a></li>
             <li class="agora"><a href="estudos.html">Estudos</a></li>
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
+            <div class="btn-logout"><a href="../../index.html">
+                <h3>Sair</h3></a>
             </div>
 
         </ul>
