--- a/site/public/index.html
+++ b/site/public/index.html
@@ -127,7 +127,7 @@
 
     <div id="informacoes_rodape">
 
-      <span>VIVA A MAGIA ♥ </span>
+      <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
 
     </div>
 </div>
