--- a/site/public/login.html
+++ b/site/public/login.html
@@ -60,14 +60,12 @@
 
   <div id="informacoes_rodape">
 
-    <span>VIVA A MAGIA ♥ </span>
+    <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
 
   </div>
 </div>
 </footer>
 
-</html>
-<script>
 
   function entrar() {
 
