--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -103,19 +103,20 @@
 
   <div id="container_rodape">
 
-    <div id="logo_rodape">
+  <div id="logo_rodape">
 
-      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+    <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
 
-    </div>
-
-    <div id="informacoes_rodape">
-
-      <span>VIVA A MAGIA ♥ </span>
-
-    </div>
   </div>
+
+  <div id="informacoes_rodape">
+
+    <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
+
+  </div>
+</div>
 </footer>
+
 
 </html>
 <script>
