--- a/site/public/testeDeCasas/quiz.html
+++ b/site/public/testeDeCasas/quiz.html
@@ -35,6 +35,23 @@
     <div id="resultado"></div>
 
 </body>
+<footer>
+
+    <div id="container_rodape">
+ 
+    <div id="logo_rodape">
+
+      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+    </div>
+
+    <div id="informacoes_rodape">
+
+      <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
+
+    </div>
+</div>
+  </footer>
 
 </html>
 <script>
