atualizacao de dashboard

--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -20,7 +20,7 @@
             <li><a href="#"> </a></li>
             <li><a href="salaComunal.html">Sala Comunal</a></li>
             <li class="agora"><a href="estudos.html">Estudos</a></li>
-            <div class="btn-logout"><a href="../../index.html">
+            <div class="btn-sair-sonserina"><a href="../../index.html">
                 <h3>Sair</h3></a>
             </div>
 
@@ -33,7 +33,7 @@
 
     <div class="container_feiticos">
         <div class="manualFeiticos">
-            <h1>Manual de feitiços</h1>
+            <h1>Manual de feitiços</h1><br><br>
             <p>Feitiços servem não só para realização de tarefas básicas — como mover um móvel sozinho, ou realizar
                 tarefas domésticas — como também e principalmente para duelos. Abaixo estarão dispostos os feitiços
                 disponiveis para treino antes do início de seu primeiro ano. </p>
@@ -195,5 +195,22 @@
     
 
 </body>
+<footer>
+
+    <div id="container_rodape">
+ 
+    <div id="logo_rodape">
+
+      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+    </div>
+
+    <div id="informacoes_rodape">
+
+      <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
+
+    </div>
+</div>
+  </footer>
 
 </html>
