Atualização de dashboard

--- a/site/public/dashboard/sonserina/salaComunal.html
+++ b/site/public/dashboard/sonserina/salaComunal.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sala Comunal</title>
-    <link rel="stylesheet" href="../../css/styleDashboard.css" />
+    <title>Sala Comunal Sonserina</title>
+    <link rel="stylesheet" href="../../css/styleDashboardSonserina.css" />
 
     <!-- scripts do Chart.js - 2022-1 -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -102,6 +102,14 @@
                 
             </section>
         </main>
+
+  
+        <div class="finalBruxos">
+            <p>Esses três bruxos têm histórias e contribuições significativas dentro da casa Sonserina, cada um deles deixando sua marca de alguma forma. Eles representam diferentes facetas da casa, desde a lealdade e sacrifício até a ambição e a busca pelo poder.</p>
+        </div>
+        
+
+
 
         <div class="container_bruxos">
             <div class="manualBruxos">
