--- a/site/public/dashboard/sonserina/estudos.html
+++ b/site/public/dashboard/sonserina/estudos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOGWARTS</title>
-    <link rel="stylesheet" href="../../css/styleDashboard.css" />
+    <link rel="stylesheet" href="../../css/styleDashboardSonserina.css" />
 
 </head>
 <header>
