Correção de tags abertas

--- a/site/public/dashboard/grifinoria/salaComunal.html
+++ b/site/public/dashboard/grifinoria/salaComunal.html
@@ -27,8 +27,8 @@
             <li><a href="#"> </a></li>
             <li class="agora"><a href="salaComunal.html">Sala Comunal</a></li>
             <li><a href="estudos.html">Estudos</a></li>
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
+            <div class="btn-logout"><a href="../../index.html">
+                <h3>Sair</h3></a>
             </div>
 
         </ul>
@@ -37,7 +37,7 @@
 
 <body onload="obterDadosGraficos()">
     <div class="hello">
-        <h3>Saudações, <span id="b_usuario">usuário</span>, da casa <span id="b_casa">SONSERINA</span>!</h3>
+        <h3>Saudações, <span id="b_usuario">usuário</span>, da casa <span id="b_casa">GRIFINÓRIA</span>!</h3>
     </div>
 
 
