--- a/site/public/testeDeCasas/testeDeCasa.html
+++ b/site/public/testeDeCasas/testeDeCasa.html
@@ -10,7 +10,7 @@
     <title>CHAPÉU SELETOR</title>
 </head>
 <header>
-    
+
     <div class="container">
         <h1 class="logo">
             <a href="index.html"><img src="../assets/img/logo.png" alt="" width="150px" /></a>
@@ -98,14 +98,14 @@
                 <span><strong>Criador</strong>: Rowena Ravenclaw <br>
                     <strong>Animal Símbolo</strong>: Águia <br>
                     <strong>Fantasma</strong>: Dama Cinzenta (Helena Ravenclaw)<br></span>
-                <p>casa onde habitam os corações indômitos; ousadia e sangue-frio e nobreza destacam os alunos da
-                    Grifinória dos demais".
-                    Com este verso, o Chapéu Seletor apresentou a casa da Grifinória em uma das canções nas cerimônias
-                    de seleção de Hogwarts.</p>
+                <p>Os alunos da Corvinal são geralmente reconhecidos por sua inteligência aguçada, curiosidade e
+                    pensamento analítico. Eles são incentivados a explorar e desenvolver seus talentos acadêmicos, além
+                    de valorizar a criatividade e a originalidade. Muitos bruxos e bruxas notáveis emergiram da Corvinal
+                    ao longo dos anos, deixando um legado significativo no mundo mágico.</p>
             </div>
 
         </div>
-        <button id="botaoQuiz"><a href="quiz.html">COLOCAR O CHAPÉU</a></button>
+        <button id="botaoQuiz"><a href="quiz.html">COLOCAR O CHAPÉU</button></a>
 
     </div>
 
@@ -114,20 +114,20 @@
 <footer>
 
     <div id="container_rodape">
- 
-    <div id="logo_rodape">
 
-      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+        <div id="logo_rodape">
 
+            <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+
+        </div>
+
+        <div id="informacoes_rodape">
+
+            <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
+
+        </div>
     </div>
-
-    <div id="informacoes_rodape">
-
-      <span>QUE A MAGIA ESTEJA COM VOCÊ ♥ </span>
-
-    </div>
-</div>
-  </footer>
+</footer>
 
 
 </html>
