--- a/site/public/dashboard/sonserina/salaComunal.html
+++ b/site/public/dashboard/sonserina/salaComunal.html
@@ -27,9 +27,10 @@
             <li><a href="#"> </a></li>
             <li class="agora"><a href="salaComunal.html">Sala Comunal</a></li>
             <li><a href="estudos.html">Estudos</a></li>
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
+            <div class="btn-logout"><a href="../../index.html">
+                <h3>Sair</h3></a>
             </div>
+
 
         </ul>
     </div>
