Correção das dashboards, rotas e imagens

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -121,7 +121,7 @@
  
     <div id="logo_rodape">
 
-      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+      <img src="assets/img/logo.png" alt="Logo rodapé" width="150px">
 
     </div>
 
