--- a/site/public/login.html
+++ b/site/public/login.html
@@ -54,7 +54,7 @@
 
   <div id="logo_rodape">
 
-    <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+    <img src="assets/img/logo.png" alt="Logo rodapé" width="150px">
 
   </div>
 
@@ -83,7 +83,7 @@
       }
       else {
           swal("Parábens", "Login realizado com sucesso, redirecionando a tela do aluno! ♥", "success");
-          setInterval('...', 2000)
+          setInterval('...', 1000)
 
 
           console.log("FORM LOGIN: ", nicknameVar);
@@ -122,7 +122,7 @@
                         } else if (sessionStorage.CASA == 4) {
                           window.location = "dashboard/sonserina/salaComunal4.html";
                         } 
-                      }, 3000); // apenas para exibir o loading
+                      }, 1000); // apenas para exibir o loading
 
                   });
 
