Atualização final de dashboard

--- a/site/public/dashboard/grifinoria/salaComunal1.html
+++ b/site/public/dashboard/grifinoria/salaComunal1.html
@@ -139,227 +139,193 @@
 <script>
 
 
-    b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
 
 
-    let proximaAtualizacao;
+let proximaAtualizacao;
 
 
 
-    function obterDadosGraficos() {
-        obterDadosGrafico(),
-            grafich2()
+function obterDadosGraficos() {
+    obterDadosGrafico(),
+        grafich2()
+}
+
+
+function obterDadosGrafico(idOrigem) {
+
+    if (proximaAtualizacao != undefined) {
+        clearTimeout(proximaAtualizacao);
     }
 
 
-    function obterDadosGrafico(idOrigem) {
+    fetch(`/medidas/ultimas/${idOrigem}`, { cache: 'no-store' }).then(function (response) {
+        if (response.ok) {
+            response.json().then(function (resposta) {
+                console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                plotarGrafico(resposta, idOrigem);
 
-        if (proximaAtualizacao != undefined) {
-            clearTimeout(proximaAtualizacao);
+            });
+        } else {
+            console.error('Nenhum dado encontrado ou erro na API');
         }
+    })
+        .catch(function (error) {
+            console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+        });
+}
+
+function grafich2() {
+
+    fetch(`/medidas/ultimas2`, { cache: 'no-store' }).then(function (response) {
+        if (response.ok) {
+            response.json().then(function (resposta2) {
+                console.log(`Dados recebidos: ${JSON.stringify(resposta2)}`);
+                plotarGrafico2(resposta2);
 
 
-        fetch(`/medidas/ultimas/${idOrigem}`, { cache: 'no-store' }).then(function (response) {
-            if (response.ok) {
-                response.json().then(function (resposta) {
-                    console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
-                    plotarGrafico(resposta, idOrigem);
-
-                });
-            } else {
-                console.error('Nenhum dado encontrado ou erro na API');
-            }
-        })
-            .catch(function (error) {
-                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
             });
-    }
+        } else {
+            console.error('Nenhum dado encontrado ou erro na API');
+        }
+    })
+        .catch(function (error) {
+            console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+        });
+}
+function plotarGrafico2(resposta2) {
 
-    function grafich2() {
+    console.log('iniciando plotagem do gráfico...');
 
-        fetch(`/medidas/ultimas2`, { cache: 'no-store' }).then(function (response) {
-            if (response.ok) {
-                response.json().then(function (resposta2) {
-                    console.log(`Dados recebidos: ${JSON.stringify(resposta2)}`);
-                    plotarGrafico2(resposta2);
+    // Criando estrutura para plotar gráfico - labels
+    let labels = [];
 
-
-                });
-            } else {
-                console.error('Nenhum dado encontrado ou erro na API');
-            }
-        })
-            .catch(function (error) {
-                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-            });
-    }
-    function plotarGrafico2(resposta2) {
-
-        console.log('iniciando plotagem do gráfico...');
-
-        // Criando estrutura para plotar gráfico - labels
-        let labels = [];
-
-        // Criando estrutura para plotar gráfico - dados
-        let dados = {
-            labels: labels,
-            datasets: [{
-                label: 'Quantidade de alunos por casa',
-                data: [],
-                fill: true,
+    // Criando estrutura para plotar gráfico - dados
+    let dados = {
+        labels: labels,
+        datasets: [
+            {
+                label: '',
+                backgroundColor: ['#740001', '#ffdb00', '#134b95', '#2a623d'],
+                data: []
+            },
+            {
+                label: 'Casa',
                 backgroundColor: ['#740001', '#ffdb00', '#134b95', '#2a623d'],
                 borderColor: '#000000',
-
-            }]
-        };
-
-
-
-        // Inserindo valores recebidos em estrutura para plotar o gráfico
-        for (i = 0; i < resposta2.length; i++) {
-            var registro = resposta2[i];
-            labels.push(registro.Casa);
-            dados.datasets[0].data.push(registro.Qtd);
-
-        }
+                fill: true,
+                data: []
+            }
+        ]
+    };
 
 
-        // Criando estrutura para plotar gráfico - config
-        const config = {
-            type: 'bar',
-            data: dados,
-        };
 
-        // Adicionando gráfico criado em div na tela
-        let myChart = new Chart(
-            document.getElementById(`myChart2`),
-            config
-        );
-
+    // Inserindo valores recebidos em estrutura para plotar o gráfico
+    for (i = 0; i < resposta2.length; i++) {
+        var registro = resposta2[i];
+        dados.labels.push(registro.Casa);
+        dados.datasets[0].data.push(registro.Casa);
+        dados.datasets[1].data.push(registro.Qtd);
+        console.log(registro.Qtd);
 
     }
 
 
-
-
-    // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
-    // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
-    // A função *plotarGrafico* também invoca a função *atualizarGrafico*
-    function plotarGrafico(resposta, idOrigem) {
-        console.log('iniciando plotagem do gráfico...');
-
-        var dados = {
-            labels: [],
-            datasets: [
-                {
-                    label: '',
-
-                    data: []
-                },
-                {
-                    label: 'Origem dos bruxos da escola',
-                    backgroundColor: ['#AA4B1B', '#704F2D', '#1E3F66'],
-                    borderColor: '#000000',
-                    fill: true,
-                    data: []
-                }
-            ]
-        };
-
-
-        for (i = 0; i < resposta.length; i++) {
-            var registro = resposta[i];
-            dados.labels.push(registro.origem);
-            dados.datasets[0].data.push(registro.origem);
-            dados.datasets[1].data.push(registro.Qtd);
-            console.log(registro.Qtd)
-
-
-        }
-
-        console.log(JSON.stringify(dados));
-
-        var ctx = myChart.getContext('2d');
-        window.myChart = Chart.Bar(ctx, {
-            data: dados,
-            options: {
-                responsive: true,
-                animation: { duration: 900 },
-                hoverMode: 'index',
-                stacked: false,
-                title: {
-                    display: true,
-                },
-
-                scales: {
-                    yAxes: [{
-                        type: 'linear',
-                        display: true,
-                        position: 'left',
-                        id: 'y-totalorigem',
-                        ticks: {
-                            beginAtZero: true,
-                            max: 32,
-                            min: 0
-                        }
-                    }, {
-                        display: false,
-                    }],
+    // Criando estrutura para plotar gráfico - config
+    const config = {
+        type: 'bar',
+        data: dados,
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
                 }
             }
-        });
+        },
+    };
+
+    // Adicionando gráfico criado em div na tela
+    let myChart = new Chart(
+        document.getElementById(`myChart2`),
+        config
+    );
+
+    myChart.style.width = '100%'
+
+}
 
 
 
-        // Esta função *atualizarGrafico* atualiza o gráfico que foi renderizado na página,
-        // buscando a última medida inserida em tabela contendo as capturas, 
 
-        //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-        //     Para ajustar o "select", ajuste o comando sql em src/models
-        function atualizarGrafico(dados) {
+// Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
+// Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
+// A função *plotarGrafico* também invoca a função *atualizarGrafico*
+function plotarGrafico(resposta, idOrigem) {
+    console.log('iniciando plotagem do gráfico...');
 
-            fetch(`/medidas/tempo-real/${idOrigem}`, { cache: 'no-store' }).then(function (response) {
-                if (response.ok) {
-                    response.json().then(function (novoRegistro) {
+    var dados = {
+        labels: [],
+        datasets: [
+            {
+                label: '',
 
-                        console.log(`Dados recebidos Atualizar  Graficos: ${JSON.stringify(novoRegistro)}`);
-                        console.log(dados);
-
-                        for (i = 0; i < novoRegistro.length; i++) {
-                            var registro = novoRegistro[i];
-                            // tirando e colocando valores no gráfico
-                            dados.labels.shift(); // apagar o primeiro
-                            dados.labels.push(registro.origem);// incluir um novo momento
-
-                            dados.datasets[0].data.shift();  // apagar o primeiro de umidade
-                            dados.datasets[0].data.push(registro.origem); // incluir uma nova medida de umidade
-
-                            dados.datasets[1].data.shift();
-                            dados.datasets[1].data.push(registro.Qtd);
-                        }
-
-                        window.myChart.update();
-
-                        // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                        proximaAtualizacao = setTimeout(() => atualizarGrafico(idOrigem, dados), 2000);
-                    });
-                } else {
-                    console.error('Nenhum dado encontrado ou erro na API');
-                    // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idOrigem, dados), 200000);
-                }
-            })
-                .catch(function (error) {
-                    console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-                });
-
-        }
+                data: []
+            },
+            {
+                label: 'Origem dos bruxos da escola',
+                backgroundColor: ['#AA4B1B', '#704F2D', '#1E3F66'],
+                borderColor: '#000000',
+                fill: true,
+                data: []
+            }
+        ]
+    };
 
 
+    for (i = 0; i < resposta.length; i++) {
+        var registro = resposta[i];
+        dados.labels.push(registro.origem);
+        dados.datasets[0].data.push(registro.origem);
+        dados.datasets[1].data.push(registro.Qtd);
+        console.log(registro.Qtd)
 
-        //  SEGUNDO GRAFICO
 
     }
+
+    console.log(JSON.stringify(dados));
+
+    var ctx = myChart.getContext('2d');
+    window.myChart = Chart.Bar(ctx, {
+        data: dados,
+        options: {
+            responsive: true,
+            animation: { duration: 900 },
+            hoverMode: 'index',
+            stacked: false,
+            title: {
+                display: true,
+            },
+
+            scales: {
+                yAxes: [{
+                    type: 'linear',
+                    display: true,
+                    position: 'left',
+                    id: 'y-totalorigem',
+                    ticks: {
+                        beginAtZero: true,
+                        max: 32,
+                        min: 0
+                    }
+                }, {
+                    display: false,
+                }],
+            }
+        }
+    });
+
+}
 
 
 
