--- a/site/public/dashboard/sonserina/salaComunal4.html
+++ b/site/public/dashboard/sonserina/salaComunal4.html
@@ -144,7 +144,7 @@
 <script>
 
 
-    b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
 
 
     let proximaAtualizacao;
@@ -208,14 +208,20 @@
         // Criando estrutura para plotar gráfico - dados
         let dados = {
             labels: labels,
-            datasets: [{
-                label: 'Quantidade de alunos por casa',
-                data: [],
-                fill: true,
-                backgroundColor: ['#740001', '#ffdb00', '#134b95', '#2a623d'],
-                borderColor: '#000000',
-
-            }]
+            datasets: [
+                {
+                    label: '',
+                    backgroundColor: ['#740001', '#ffdb00', '#134b95', '#2a623d'],
+                    data: []
+                },
+                {
+                    label: 'Casa',
+                    backgroundColor: ['#740001', '#ffdb00', '#134b95', '#2a623d'],
+                    borderColor: '#000000',
+                    fill: true,
+                    data: []
+                }
+            ]
         };
 
 
@@ -223,8 +229,10 @@
         // Inserindo valores recebidos em estrutura para plotar o gráfico
         for (i = 0; i < resposta2.length; i++) {
             var registro = resposta2[i];
-            labels.push(registro.Casa);
-            dados.datasets[0].data.push(registro.Qtd);
+            dados.labels.push(registro.Casa);
+            dados.datasets[0].data.push(registro.Casa);
+            dados.datasets[1].data.push(registro.Qtd);
+            console.log(registro.Qtd);
 
         }
 
@@ -233,6 +241,13 @@
         const config = {
             type: 'bar',
             data: dados,
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            },
         };
 
         // Adicionando gráfico criado em div na tela
@@ -241,6 +256,7 @@
             config
         );
 
+        myChart.style.width = '100%'
 
     }
 
@@ -313,53 +329,6 @@
                 }
             }
         });
-
-
-
-        // Esta função *atualizarGrafico* atualiza o gráfico que foi renderizado na página,
-        // buscando a última medida inserida em tabela contendo as capturas, 
-
-        //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-        //     Para ajustar o "select", ajuste o comando sql em src/models
-        function atualizarGrafico(dados) {
-
-            fetch(`/medidas/tempo-real/${idOrigem}`, { cache: 'no-store' }).then(function (response) {
-                if (response.ok) {
-                    response.json().then(function (novoRegistro) {
-
-                        console.log(`Dados recebidos Atualizar  Graficos: ${JSON.stringify(novoRegistro)}`);
-                        console.log(dados);
-
-                        for (i = 0; i < novoRegistro.length; i++) {
-                            var registro = novoRegistro[i];
-                            // tirando e colocando valores no gráfico
-                            dados.labels.shift(); // apagar o primeiro
-                            dados.labels.push(registro.origem);// incluir um novo momento
-
-                            dados.datasets[0].data.shift();  // apagar o primeiro de umidade
-                            dados.datasets[0].data.push(registro.origem); // incluir uma nova medida de umidade
-
-                            dados.datasets[1].data.shift();
-                            dados.datasets[1].data.push(registro.Qtd);
-                        }
-
-                        window.myChart.update();
-
-                        // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                        proximaAtualizacao = setTimeout(() => atualizarGrafico(idOrigem, dados), 2000);
-                    });
-                } else {
-                    console.error('Nenhum dado encontrado ou erro na API');
-                    // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idOrigem, dados), 200000);
-                }
-            })
-                .catch(function (error) {
-                    console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-                });
-
-        }
-
 
     }
 
