--- a/site/public/index.html
+++ b/site/public/index.html
@@ -29,7 +29,7 @@
     <div class="banner">
       <div class="container">
         <div id="botao">
-          <button id="botao1" onclick="cadastro.html"> INSCREVA-SE</button>
+          <button id="botao1"><a href="testeDeCasas/testeDeCasa.html"> INSCREVA-SE</a></button>
         </div>
       </div>
     </div>
