--- a/site/public/testeDeCasas/quiz.html
+++ b/site/public/testeDeCasas/quiz.html
@@ -27,7 +27,7 @@
 <body>
     <h1 id="tituloQuiz">Hora de saber a qual casa seu coração pertence...</h1>
     <span class="container_quiz">Você será apresentado com uma pergunta e várias opções de resposta. Sua tarefa é
-        escolher a resposta correta para cada pergunta. Após escolher uma opção, você avançará para a próxima pergunta e
+        escolher a resposta a qual você mais se identifica para cada pergunta. Após escolher uma opção, você avançará para a próxima pergunta e
         assim por diante.</span>
 
     <div id="pergunta"></div>
@@ -41,7 +41,7 @@
  
     <div id="logo_rodape">
 
-      <img src="/site/public/assets/img/logo.png" alt="Logo rodapé" width="150px">
+      <img src="../assets/img/logo.png" alt="Logo rodapé" width="150px">
 
     </div>
 
